Better verbage on homepage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Oscar Menjivar</title>
 <!--reset css for consistancy -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 
 <link rel="stylesheet" href="css/bootstrap.css">
@@ -42,7 +42,7 @@
 			<p class="Intro" >Hello. I enjoy solving problems. </p>
 		</div>
 		<div id ="aboutme">
-			<p class="Intro" > My name is Oscar Menjivar, and I am currently based out of Toronto where I work in the Mobile Development practice at SapientRazorfish. I have two main passions in life, exploring new and exicting culinary expierences and solving challenging technical problems. In my time at SapientRazorfish, I have been lucky enough to work on the digital transformation team for the McDonalds Global account. Specifically I have been developing features for and maintaining the McDonalds USA Mobile Ordering app. In my spare time I like to learn new things tech and food related and am currently dabbling in creating apis using Node and experimenting with various mexican chillies. 
+			<p class="Intro" > My name is Oscar Menjivar, and I am developer based out of Toronto. I currently work in the Mobile Development practice at SapientRazorfish. I have two main passions in life, exploring new and exicting culinary expierences and solving challenging technical problems. In my time at SapientRazorfish, I have been lucky enough to work on the digital transformation team for the McDonalds Global account. Specifically, I have been developing features and maintaining the McDonalds USA Mobile Ordering app. In my spare time I like to learn new things tech and food related. I am currently dabbling in creating apis using Node and experimenting with various mexican chillie recipes. 
 			</p>
  		</div>
  		<div id="socialMediaLinks">
@@ -61,7 +61,7 @@
 			<div class="shellLine" id="1Declaration"></div><div id="cursor"></div>
 		</div>
 		<div id="mypic">
-			<div id="PicWrapper"> 
+			<div id="PicWrapper">
 				<img src=images/OscarM_MP.png>
 				<p id="NoticeWithImage"> Scroll around to replay the shell animation! </p>
 			</div>
@@ -79,4 +79,3 @@
 
 <!--End Slide 2 -->
 </body>
-
