--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<p class="Intro" >Hello. I enjoy solving problems. </p>
 		</div>
 		<div id ="aboutme">
-			<p class="Intro" > My name is Oscar Menjivar, and I am developer based out of Toronto. I currently work at Ecobee as a native android developer. I have two main passions in life, exploring new and exicting culinary expierences and solving challenging technical problems. In my time at Ecobee, I have been lucky enough to work on some really fun and exciting projects. Specifically, I have been developing features and maintaining Ecobee's app, which interfaces with several of their IoT devices. In my spare time I like to learn new things tech and food related. I am currently dabbling in aws and cloud ci and experimenting with various mexican taco recipes.
+			<p class="Intro" > My name is Oscar Menjivar, and I am developer based out of Kitchener, and I currently work at Intuit as a senior android developer. I have two main passions in life, exploring new and exicting culinary expierences and solving challenging technical problems. In my time at Intuit, I have been lucky enough to work on some really fun and exciting projects. Specifically, I have been working on Intuit's TurboTax design system. In my spare time I like to learn new things tech and food related. I am currently experimenting with various mexican taco recipes.
 			</p>
  		</div>
  		<div id="socialMediaLinks">
